vmpool/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
    argocd.argoproj.io/sync-wave: "-6"
  name: usecase-vmpool
